simulator/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepsea
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  name: deepsea-simulator-service
  namespace: deepsea
spec:
  selector:
    app: deepsea-simulator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulator-deployment
  namespace: deepsea
  labels:
    app: deepsea-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepsea-simulator
  template:
    metadata:
      labels:
        app: deepsea-simulator
    spec:
      containers:
        - name: deapsea-simulator-container
          image: gcr.io/jpbetz-public-images/deepsea-simulator:latest
          ports:
            - containerPort: 8085
